--- a/teleperformance.csharp.core/Core/Core.csproj
+++ b/teleperformance.csharp.core/Core/Core.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Mappers\UsersMapp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterMappings.cs" />
+    <Compile Include="Repositories\HobbiesUsersRepository.cs" />
+    <Compile Include="Repositories\HobbiesRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
