--- a/teleperformance.csharp.mvc/Teleperformance/bin/Teleperformance.dll.config
+++ b/teleperformance.csharp.mvc/Teleperformance/bin/Teleperformance.dll.config
@@ -6,7 +6,7 @@
 <configuration>
   
   <connectionStrings>
-    <add name="dbconnection" connectionString="Data Source=DESKTOP-8URTBTU\SQLEXPRESS;Integrated Security=true;Initial Catalog=TESTE" providerName="System.Data.SqlClient" />
+    <add name="dbconnection" connectionString="Data Source=DESKTOP-8URTBTU\SQLEXPRESS;Integrated Security=true;Initial Catalog=TELEPERFORMANCE" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings>
